<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/activity_toolbar"
        layout="@layout/activity_toolbar" />

    <LinearLayout
        style="@style/AppMainLayout"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <Button
            android:id="@+id/button_open_settings"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/notification_settings" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/padding_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_base_api">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/api_address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="@dimen/padding_medium"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/button_api_endpoint_save"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
